Add more noun details

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -18,9 +18,14 @@ quantifiers and modifiers.
 The %%ü@ü%%/%%ɽʄ@ü%% particle precedes this noun phrase.
 
 During causative sentences, a NP with this role represents the *causer*.
-Otherwise, an NP with this role will be the agent or experiencer of the action.
-The nature of this role is that the noun phrase is making the choice to commit
-the act of their own free will. 
+Otherwise, an NP with this role will be the **agent** or **experiencer** of the
+action. The nature of this role is that the marked noun phrase is making the
+choice to commit the act of the predicate of their own free will. 
+
+When used with the negatitive particle (%%yök / ɀ̑ı@yök%%) it means that the
+marked noun phrase is either excluded from being the subject of the committed
+act of the predicate or that the act itself was committed but by something other
+than the marked noun phrase.
 
 ### Causee / Involuntary Subject
 
@@ -28,21 +33,25 @@ The %%ölë@ölë%%/%%ɽıʓʇ@ölë%% particle precedes this noun phrase.
 
 During causative sentences, a NP with this role will represent the *causee*.
 Otherwise, an NP with this role will be the agent or experiencer of the action.
-The nature of this role is that the noun phrase is **not** making the choice to
-commit the act of their own free will. Either they are bound/forced to do so or
-they do not have the wherewithal to make a conscious choice on the matter and
-are acting out of some basic instinst.
+The nature of this role is that the marked noun phrase is **not** making the
+choice to commit the act of their own free will. Either they are bound/forced to
+do so or they do not have the wherewithal to make a conscious choice on the
+matter and are acting out of some basic instinst.
+
+When used with the negatitive particle (%%yök / ɀ̑ı@yök%%) it has the same
+semantic interpretation as the voluntary subject particle.
 
 ### Patient, Theme, Stimulus (Direct Object)
 
 The %%cö@cö%%/%%ꞇı@cö%% particle precedes this noun phrase.
 
-This role is used for transitive verbs that have an additional argument. The
-argument represents a patient (an entity that undergoes the action and changes
-state), a theme (an entity that undergoes the action but does not change state),
-or a stimulus (an entity that prompts sensory or emotional feeling). In English,
-this represents some of the senses of the word "to" and "into". Although, many
-English verbs don't rely on a preposition to introduce their direct object.
+This role is used in predicates with transitive verbs that have an argument. The
+argument can represent a *patient* (an entity that undergoes the action and
+changes state), a *theme* (an entity that undergoes the action but does not
+change state), or a *stimulus* (an entity that prompts sensory or emotional
+feeling). In English, this represents some of the senses of the word "to" and
+"into" (many English verbs don't rely on a preposition particle to
+introduce their direct object).
 
 :::caution Base Verbs Without This Particle
 
@@ -59,9 +68,14 @@ state. A **stimulus** is an entity that prompts or triggers the emotional or
 sensory action that is being described. These kinds of direct objects aren't
 separately marked because which kind of object is being specified can be
 determined from the verb that is being used. The only thing that you must
-remember is that only base verbs can take a preposition of this kind. A sentence
-with a base modifier or base noun being used as a verb cannot contain this
-preposition.
+remember is that only base verbs can take a preposition of this kind. **A
+sentence with a base modifier or base noun being used as a verb cannot contain
+this preposition.**
+
+When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+marked noun phrase is either excluded from being the argument of the committed
+act of the predicate or that the act itself was committed but with an object
+that is something other than the marked noun phrase.
 
 ### Instrument or Manner
 
@@ -86,12 +100,23 @@ ordering**.
 
 :::
 
+When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+marked noun phrase is either excluded from being the manner of instrument of the
+committed act of the predicate or that the act itself was committed but in a
+manner or with an object that is something other than the marked noun phrase. In
+English, this represents some of the senses of the word "without".
+
 ### Location or Time
 
 The %%hoi@hoi%%/%%ɂɽɟ@hoi%% particle precedes this noun phrase.
 
 This role is used for NPs that represent where or when the action occurs. In
 English, this represents some of the senses of the words "in", "at", and "on".
+
+When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+marked noun phrase is either excluded from being the location or time of the
+committed act of the predicate or that the act itself was committed but at a
+location or time that is somewhere other than the marked noun phrase.
 
 ### Direction or Destination (Indirect Object)
 
@@ -111,12 +136,22 @@ other referred entity.
 
 :::
 
+When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+marked noun phrase is either excluded from being the recipient of the committed
+act of the predicate or that the act itself was committed but with recipient
+that is something other than the marked noun phrase.
+
 ### Source or Origin
 
 The %%sün@sün%%/%%ɐ̃ʄ@sün%% particle precedes this noun phrase.
 
 This role is used for NPs that represent where the action originated. In
 English, this represents some of the senses of the word "from".
+
+When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+marked noun phrase is either excluded from being the source or origin of the
+committed act of the predicate or that the act itself was committed but with a
+source or origin that is something other than the marked noun phrase.
 
 ### Beneficiary or Purpose
 
@@ -126,6 +161,11 @@ This role is used for NPs that represent for whose benefit the action occurs or
 the reason for the action. In English, this represents some of the senses of the
 word "for".
 
+When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+marked noun phrase is either excluded from being the beneficiary/purpose of the
+committed act of the predicate or that the act itself was committed but with a
+beneficiary/purpose that is something other than the marked noun phrase.
+
 ### Cause
 
 The %%nënko@nënko%%/%%ƨ̃ʇɔ@nënko%% particle precedes this noun phrase.
@@ -133,6 +173,12 @@ The %%nënko@nënko%%/%%ƨ̃ʇɔ@nënko%% particle precedes this noun phrase.
 This role is used for NPs that represent what caused the action to occur or a
 past reason that led to the action. In English, this represents some of the
 senses of the word "because".
+
+When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+marked noun phrase is either excluded from being the cause of the committed
+act of the predicate or that the act itself was committed but with a cause
+that is something other than the marked noun phrase. In English, this represents
+some of the senses of the word "despite".
 
 ### Collaborator
 
@@ -143,6 +189,12 @@ the same action as the subject. However, the NP is not considered a subject of
 the sentence. In English, this represents some of the senses of the word
 "with".
 
+When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+marked noun phrase is either excluded from participating in the committed
+act of the predicate or that the act itself was committed but with a participant
+that is something other than the marked noun phrase. In English, this represents
+some of the senses of the word "without".
+
 ### Context or Condition
 
 The %%win@win%%/%%ʒ̃ɟ@win%% particle precedes this noun phrase.
@@ -150,6 +202,12 @@ The %%win@win%%/%%ʒ̃ɟ@win%% particle precedes this noun phrase.
 This role is used for NPs that represent an overarching topic, contextual
 detail, or a condition for the underlying sentence. In English, this represents
 some of the senses of the words "regarding", "given", "as for", and "when".
+
+When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+marked noun phrase is either excluded from being the topic or context of the
+committed act of the predicate or that the act itself was committed but with a
+topic/context that is something other than the marked noun phrase. In English,
+this represents some of the senses of the word "regardless".
 
 ### Counter-Agent
 
@@ -160,6 +218,11 @@ verbs that indicates an opposing agent for verbs that indicate an action that is
 *oppositional* (where both sides are engaging in an opposing action). In
 English, this represents some of the senses of the word "against".
 
+When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+marked noun phrase is either excluded from being the counter-agent of the
+committed act of the predicate or that the act itself was committed but with a
+counter-agent that is something other than the marked noun phrase.
+
 ### Evidence
 
 The %%üc@üc%%/%%ɽ̄ʄ@üc%% particle precedes this noun phrase.
@@ -167,6 +230,11 @@ The %%üc@üc%%/%%ɽ̄ʄ@üc%% particle precedes this noun phrase.
 This role is used for NPs that represent proof or an information source that the
 specified action is known or believed to have occurred, is occurring, or will
 occur. In English, this represents some of the senses of the phrase "or so".
+
+When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+marked noun phrase is either excluded from being the proof/source of the
+committed act of the predicate or that the act itself was committed but with
+proof or a source that is something other than the marked noun phrase.
 
 ### Distance or Duration
 
@@ -177,6 +245,11 @@ occurs within. This role is related to the location/time role but it represents
 finite physical space or actual time periods. In English, this represents some
 of the senses of the word "for".
 
+When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+marked noun phrase is either excluded from being the distance ordutation of the
+committed act of the predicate or that the act itself was committed but with a
+duration or distance that is something other than the marked noun phrase.
+
 ### Intermediate
 
 The %%gıtno@gıtno%%/%%ꜿ̆ȷƨ@gıtno%% particle precedes this noun phrase.
@@ -186,6 +259,11 @@ that the action occurs between or a conjunction of two NPs that represent two
 boundaries in time or space that the action occurs between. In English, this
 represents some of the senses of the word "between".
 
+When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+marked noun phrase is either excluded from being the intermediary entity of the
+committed act of the predicate or that the act itself was committed but with an
+intermediary that is something other than the marked noun phrase.
+
 ### Genitive
 
 The %%yë@yë%%/%%ɀʇ@yë%% particle precedes this noun phrase.
@@ -194,17 +272,22 @@ This role is used for a NP that is describing the preceding noun or verb phrase
 in some contextually dependent manner. In English, this represents some of the
 senses of the word "of".
 
+This particle isn't used with the negatitive particle (%%yök / ɀ̑ı@yök%%)
+because it's meant to describe nouns through associating other nouns and there's
+already an existing way to describe zero nouns (%%xünyu / ɋ̃ʄɀʃ@xünyu%%). You can
+achieve a similar kind of negative association by using a relative clause.
+
 ## From...
 
 Converting from the other content types into nouns.
 
 ### Verbs
 
-When a verb acts as a noun, it represents an archetypal object that has been or
-hasn't yet been involved in the happening of that verb action. Like "-able" in
-English but also there are many terms that English has to refer to these
-entities already. These are direct objects, patients and themes that would be
-logical to use in a sentence where you use that verb.
+When a verb acts as a noun, it represents an archetypal object that has or will
+be involved in the happening of that verb action. Like "-ed" in English but also
+there are many concrete terms that English has to refer to these entities
+already. These are direct objects, patients and themes that would be logical to
+use in a sentence where you use that verb.
 
 ### Modifiers
 
