Update measurement sections

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -505,16 +505,16 @@ modifier content word that does double duty as a time unit for minutes.
 
 To indicate a measurement of something, it helps to have a way to describe a
 "unit" of measurement. There is no exact word for this in Hisyëö, although
-mikdol/ƶ̑ɟʌ͊ and wilüwo/ʒɟʓʄʒ come close. The word "unit"
-means "singular entity" which we might think to reach for the number one
-(kut/ɔʃʌʄʌ). To help add some clarity, let's use "trait" as
-the head word to create our own state of "oneness". Instead of adding "entities"
-as true head word, let's just leave it as-is because this matches how the words
-that stand-in for "second" and "minute" work.
+<HisyeoText kind='latin'>cëö</HisyeoText> and
+<HisyeoText kind='latin'>yogö</HisyeoText> have their uses which we'll discuss
+below. The word "unit" means "singular entity" which suggests that we should
+reach for the number one (<HisyeoText kind='latin'>kut</HisyeoText>). To help
+add some clarity, let's use the agentive verb noun particle to create a meaning
+of "one-er" or something whose state is primarily about oneness.
 
 <HisyeoTabs>
-  <p>gö yë di kut yë di volo möi et yë zomi ü hondon. <em>"The family is the basic unit of society."</em></p>
-  <p>ondo ü küngiyo cö do ëo vunlit ölë cızi müt düi yodo son di kut. <em>"The company plans to split into two or three units."</em></p>
+  <p>gö yë öni kut yë di volo möi et yë zomi ü hondon. <em>"The family is the basic unit of society."</em></p>
+  <p>ondo ü küngiyo cö do ëo vunlit ölë cızi müt düi yodo son öni kut. <em>"The company plans to split into two or three units."</em></p>
 </HisyeoTabs>
 
 Other than the time words, the rest of the measurement units are done by just
@@ -523,7 +523,7 @@ referring to what kind of measurement the unit is for.
 ### Temperature
 
 <HisyeoTabs>
-  <p>socok ü ximu cö vıldonpun lon kut viyën di kut yë tüt. <em>"Water boils at 100 degrees Celsius."</em></p>
+  <p>socok ü ximu cö vıldonpun lon kut viyën cëö yë tüt. <em>"Water boils at 100 degrees Celsius."</em></p>
 </HisyeoTabs>
 
 Since "Celcius" and "Fahrenheit" are names, you can use these if needed. The
@@ -532,14 +532,14 @@ proper spellings would be:
 <Tabs groupId="popöun-kon-cukto" queryString>
     <TabItem value="latin" label="Latin" default>
         <ul>
-          <li><HisyeoText kind='latin'>di kut Volunhoıt</HisyeoText></li>
-          <li><HisyeoText kind='latin'>di kut Selsius</HisyeoText></li>
+          <li><HisyeoText kind='latin'>cëö Velunhoıt</HisyeoText></li>
+          <li><HisyeoText kind='latin'>cëö Selsius</HisyeoText></li>
         </ul>
     </TabItem>
     <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
         <ul>
-          <li><HisyeoText kind='abugida'>di kut Volunhoıt</HisyeoText></li>
-          <li><HisyeoText kind='abugida'>di kut Selsius</HisyeoText></li>
+          <li><HisyeoText kind='abugida'>cëö Velunhoıt</HisyeoText></li>
+          <li><HisyeoText kind='abugida'>cëö Selsius</HisyeoText></li>
         </ul>
     </TabItem>
 </Tabs>
@@ -547,19 +547,19 @@ proper spellings would be:
 ### Mass/Volume/Weight
 
 For mass, assume that measurements are in grams or pounds (depending on where
-you are in the world). Add cënpö/ꞇ̃ʇʋı for kilograms or tons.
+you are in the world). Add <HisyeoText kind='latin'>cënpö</HisyeoText> for kilograms or tons.
 
 > It is widely recommended that adults consume 15-35 grams of fiber daily, although many Americans fall short.
 > 
 > —Casey Seiden, Verywell Health, 3 May 2024
 
 <HisyeoTabs>
-  <p>pësnëhot nulto cö vos mokon ü umo dës xonluk gıtno dus tiü moliyü son dus tiü di kut yë küsowi cö zöhün vünië dës siüvo hoi xokön lono lëkın püzök onö ü mikdol yë ëto umo Umelıkın</p>
+  <p>pësnëhot nulto cö vos mokon ü umo dës xonluk gıtno dus tiü moliyü son dus tiü öni kut yë küsowi cö zöhün vünië dës siüvo hoi xokön lono lëkın püzök onö ü mikdol yë ëto umo Umelıkın</p>
 </HisyeoTabs>
 
 ### Length/Width/Height
 
 For mass, assume that measurements are in meters or feet (depending on where you
-are in the world). Add cënpö/ꞇ̃ʇʋı for kilometers or miles.
+are in the world). Add <HisyeoText kind='latin'>cënpö</HisyeoText> for kilometers or miles.
 
 <HisyeoTooltip />
