update first steps lesson to use new tooltip format

--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -2,6 +2,12 @@
 sidebar_position: 1
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import HisyeoTabs from '@site/src/components/HisyeoTabs'
+import HisyeoText from '@site/src/components/HisyeoText'
+import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
+
 # First Steps
 
 What is this language and how do you pronounce it?
@@ -38,13 +44,10 @@ verb, or modifier so there's a good chance it will be used in a way that seems
 wrong to your native language's grammar.
 
 **This is okay.** Try to focus on the essence of that native language word,
-imagine it being translated as the other  parts of speech. Now think of the
+imagine it being translated as the other parts of speech. Now think of the
 Hisyëö word as covering all of these words. This is why we include all of the
 different derivation translations in each definition, so that you can
-familiarize yourself with all the ways it can be utilized. In fact, the provided
-descriptions are just at the basic level because when you start making compound
-phrases including these words, the meaning now must be interpreted in terms of
-the head noun's essence or in terms of the head verb's activity.
+familiarize yourself with all the ways it can be utilized.
 
 :::
 
@@ -76,20 +79,20 @@ wet so that you can begin your immersion training.
 
 The following are some of the current established expressions that Hisyëans use
 in day-to-day conversation:
-- %%voxo@voxo%% (*vah*-shah) (oh!) (woah!)
-- %%küu@küu%% %%lö@lö%% %%ü@ü%% %%ni@ni%% (*koo*-wuh loh oo nee) (Let's go!)
-- %%gö@gö%% %%zık@zık%% %%ü@ü%% %%nimü@nimü%% (goh jick oo *nee*-moo) (How are you doing?)
-- %%xön@xön%% %%ü@ü%% %%noyo@noyo%% (shone oo *nah*-yah) (I am good.)
-- %%si@si%% %%gö@gö%% %%zık@zık%% %%ü@ü%% %%lono@lono%% %%nimü@nimü%% (see goh jick oo *lah*-nah) (How has your day been?)
-- %%yök@yök%% %%xön@xön%% (yoke shone) (Not good.)
-- %%yonlüs@yonlüs%% %%ü@ü%% %%zık@zık%% (*yan*-loose oo jick) (What's wrong?)
-- %%yök@yök%% %%sonkon@sonkon%% (yoke *san*-kan) (It doesn't matter.) 
-- ...%%ci@ci%% (chee) (...agree?)
-- %%löicök@löicök%% (*loy*-choke) (definitely!)
-- %%yünlön@yünlön%% %%cö@cö%% %%noyo@noyo%% (*yoon*-lan choh *nah*-yah) (Sorry!)
-- %%küu@küu%% %%yök@yök%% %%cinzon@cinzon%% (Don't worry!)
-- %%yök@yök%% %%ixölö@ixölö%% (It's not a problem.)
-- %%köi@köi%% %%gö@gö%% %%ü@ü%% %%noyo@noyo%% %%hoi@hoi%% %%limien@limien%% %%ko@ko%% (Can I come in?)
+- <HisyeoText kind='latin'>voxo. <em>woah!</em></HisyeoText>
+- <HisyeoText kind='latin'>küu lö ü ni. <em>Let's go!</em></HisyeoText>
+- <HisyeoText kind='latin'>gö zık ü nimü. <em>How are you doing?</em></HisyeoText>
+- <HisyeoText kind='latin'>xön ü noyo. <em>I am good.</em></HisyeoText>
+- <HisyeoText kind='latin'>si gö zık ü lono nimü. <em>How has your day been?</em></HisyeoText>
+- <HisyeoText kind='latin'>yök xön. <em>Not good.</em></HisyeoText>
+- <HisyeoText kind='latin'>yonlüs ü zık. <em>What's wrong?</em></HisyeoText>
+- <HisyeoText kind='latin'>yök sonkon <em>It doesn't matter.</em></HisyeoText>
+- <HisyeoText kind='latin'>...ci. <em>...agree?</em></HisyeoText>
+- <HisyeoText kind='latin'>löicök. <em>definitely!</em></HisyeoText>
+- <HisyeoText kind='latin'>yünlön cö noyo. <em>Sorry!</em></HisyeoText>
+- <HisyeoText kind='latin'>küu yök cinzon. <em>Don't worry!</em></HisyeoText>
+- <HisyeoText kind='latin'>yök ixölö. <em>It's not a problem.</em></HisyeoText>
+- <HisyeoText kind='latin'>köi gö ü noyo hoi limien ko <em>Can I come in?</em></HisyeoText>
 
 :::
 
@@ -186,4 +189,4 @@ as in **l**inger or ba**ll**ad
 ##### y - voiced palatal approximant
 as in **y**earn or ma**y**o
 
-
+<HisyeoTooltip />
