fixes for terms that changed

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -225,7 +225,7 @@ counter-agent that is something other than the marked noun phrase.
 
 ### Evidence
 
-The %%üc@üc%%/%%ɽ̄ʄ@üc%% particle precedes this noun phrase.
+The %%oldıs@oldıs%%/%%ɽ͊ʌ́ȷ@oldıs%% particle precedes this noun phrase.
 
 This role is used for NPs that represent proof or an information source that the
 specified action is known or believed to have occurred, is occurring, or will
