switch determiners to non-term components

--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -4,6 +4,10 @@ sidebar_position: 4
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import HisyeoTabs from '@site/src/components/HisyeoTabs'
+import HisyeoText from '@site/src/components/HisyeoText'
+import HisyeoWord from '@site/src/components/HisyeoWord'
+import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Determiners
 
@@ -27,89 +31,84 @@ by using the below method of assembling parts of a number:
   <TabItem value="latin" label="Latin" default>
     <table>
         <tr><td><strong>Number</strong></td><td><strong>Hisyëö</strong></td></tr>
-        <tr><td>0</td><td>%%xünyu@xünyu%%</td></tr>
-        <tr><td>1</td><td>%%kut@kut%%</td></tr>
-        <tr><td>2</td><td>%%düi@düi%%</td></tr>
-        <tr><td>3</td><td>%%son@son%%</td></tr>
-        <tr><td>4</td><td>%%nonkü@nonkü%%</td></tr>
-        <tr><td>5</td><td>%%tiü@tiü%%</td></tr>
-        <tr><td>6</td><td>%%toü@toü%%</td></tr>
-        <tr><td>7</td><td>%%xëti@xëti%%</td></tr>
-        <tr><td>8</td><td>%%tukwos@tukwos%%</td></tr>
-        <tr><td>9</td><td>%%tiso@tiso%%</td></tr>
-        <tr><td>10</td><td>%%dus@dus%%</td></tr>
-        <tr><td>11</td><td>%%önsu@önsu%%</td></tr>
-        <tr><td>12</td><td>%%pole@pole%%</td></tr>
-        <tr><td>13</td><td>%%telö@telö%%</td></tr>
-        <tr><td>14</td><td>%%zıyön@zıyön%%</td></tr>
-        <tr><td>15</td><td>%%kinsë@kinsë%%</td></tr>
-        <tr><td>16</td><td>%%ses@ses%%</td></tr>
-        <tr><td>17</td><td>%%dus@dus%% %%xëti@xëti%%</td></tr>
-        <tr><td>18</td><td>%%dus@dus%% %%tukwos@tukwos%%</td></tr>
-        <tr><td>19</td><td>%%dus@dus%% %%tiso@tiso%%</td></tr>
-        <tr><td>20</td><td>%%düi@düi%% %%dus@dus%%</td></tr>
-        <tr><td>21</td><td>%%düi@düi%% %%dus@dus%% %%kut@kut%%</td></tr>
-        <tr><td>22</td><td>%%düi@düi%% %%dus@dus%% %%düi@düi%%</td></tr>
-        <tr><td>23</td><td>%%düi@düi%% %%dus@dus%% %%son@son%%</td></tr>
-        <tr><td>100</td><td>%%viyën@viyën%%</td></tr>
-        <tr><td>101</td><td>%%viyën@viyën%% %%kut@kut%%</td></tr>
-        <tr><td>234</td><td>%%düi@düi%% %%viyën@viyën%% %%son@son%% %%dus@dus%% %%nonkü@nonkü%%</td></tr>
-        <tr><td>1000</td><td>%%cın@cın%% %%kut@kut%%</td></tr>
-        <tr><td>1,000,000</td><td>%%cın@cın%% %%düi@düi%%</td></tr>
-        <tr><td>1,999</td><td>%%cın@cın%% %%kut@kut%%,%%tiso@tiso%% %%viyën@viyën%% %%tiso@tiso%% %%dus@dus%% %%tiso@tiso%%</td></tr>
+        <tr><td><p>0</p></td><td><HisyeoText kind='latin'>xünyu</HisyeoText></td></tr>
+        <tr><td><p>1</p></td><td><HisyeoText kind='latin'>kut</HisyeoText></td></tr>
+        <tr><td><p>2</p></td><td><HisyeoText kind='latin'>düi</HisyeoText></td></tr>
+        <tr><td><p>3</p></td><td><HisyeoText kind='latin'>son</HisyeoText></td></tr>
+        <tr><td><p>4</p></td><td><HisyeoText kind='latin'>nonkü</HisyeoText></td></tr>
+        <tr><td><p>5</p></td><td><HisyeoText kind='latin'>tiü</HisyeoText></td></tr>
+        <tr><td><p>6</p></td><td><HisyeoText kind='latin'>toü</HisyeoText></td></tr>
+        <tr><td><p>7</p></td><td><HisyeoText kind='latin'>xëti</HisyeoText></td></tr>
+        <tr><td><p>8</p></td><td><HisyeoText kind='latin'>tukwos</HisyeoText></td></tr>
+        <tr><td><p>9</p></td><td><HisyeoText kind='latin'>tiso</HisyeoText></td></tr>
+        <tr><td><p>10</p></td><td><HisyeoText kind='latin'>dus</HisyeoText></td></tr>
+        <tr><td><p>11</p></td><td><HisyeoText kind='latin'>önsu</HisyeoText></td></tr>
+        <tr><td><p>12</p></td><td><HisyeoText kind='latin'>pole</HisyeoText></td></tr>
+        <tr><td><p>13</p></td><td><HisyeoText kind='latin'>telö</HisyeoText></td></tr>
+        <tr><td><p>14</p></td><td><HisyeoText kind='latin'>zıyön</HisyeoText></td></tr>
+        <tr><td><p>15</p></td><td><HisyeoText kind='latin'>kinsë</HisyeoText></td></tr>
+        <tr><td><p>16</p></td><td><HisyeoText kind='latin'>ses</HisyeoText></td></tr>
+        <tr><td><p>17</p></td><td><HisyeoText kind='latin'>dus xëti</HisyeoText></td></tr>
+        <tr><td><p>18</p></td><td><HisyeoText kind='latin'>dus tukwos</HisyeoText></td></tr>
+        <tr><td><p>19</p></td><td><HisyeoText kind='latin'>dus tiso</HisyeoText></td></tr>
+        <tr><td><p>20</p></td><td><HisyeoText kind='latin'>düi dus</HisyeoText></td></tr>
+        <tr><td><p>21</p></td><td><HisyeoText kind='latin'>düi dus kut</HisyeoText></td></tr>
+        <tr><td><p>22</p></td><td><HisyeoText kind='latin'>düi dus düi</HisyeoText></td></tr>
+        <tr><td><p>23</p></td><td><HisyeoText kind='latin'>düi dus son</HisyeoText></td></tr>
+        <tr><td><p>100</p></td><td><HisyeoText kind='latin'>viyën</HisyeoText></td></tr>
+        <tr><td><p>101</p></td><td><HisyeoText kind='latin'>viyën kut</HisyeoText></td></tr>
+        <tr><td><p>234</p></td><td><HisyeoText kind='latin'>düi viyën son dus nonkü</HisyeoText></td></tr>
+        <tr><td><p>1000</p></td><td><HisyeoText kind='latin'>cın kut</HisyeoText></td></tr>
+        <tr><td><p>1,000,000</p></td><td><HisyeoText kind='latin'>cın düi</HisyeoText></td></tr>
+        <tr><td><p>1,999</p></td><td><HisyeoText kind='latin'>cın kut, tiso viyën tiso dus tiso</HisyeoText></td></tr>
     </table>
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
     <table>
         <tr><td><strong>Number</strong></td><td><strong>ɂ́ɟɀʇɽı</strong></td></tr>
-        <tr><td>0</td><td>%%ɋ̃ʄɀʃ@xünyu%%</td></tr>
-        <tr><td>1</td><td>%%ɔ̆ʃ@kut%%</td></tr>
-        <tr><td>2</td><td>%%ʌʄɽɟ@düi%%</td></tr>
-        <tr><td>3</td><td>%%ɐ̃@son%%</td></tr>
-        <tr><td>4</td><td>%%ƨ̃ɔʄ@nonkü%%</td></tr>
-        <tr><td>5</td><td>%%cɟɽʄ@tiü%%</td></tr>
-        <tr><td>6</td><td>%%cɽʄ@toü%%</td></tr>
-        <tr><td>7</td><td>%%ɋʇcɟ@xëti%%</td></tr>
-        <tr><td>8</td><td>%%c̑ʃʒ́@tukwos%%</td></tr>
-        <tr><td>9</td><td>%%cɟɐ@tiso%%</td></tr>
-        <tr><td>10</td><td>%%ʌ́ʃ@dus%%</td></tr>
-        <tr><td>11</td><td>%%ɽ̃ıɐʃ@önsu%%</td></tr>
-        <tr><td>12</td><td>%%ʋʓɿ@pole%%</td></tr>
-        <tr><td>13</td><td>%%cɿʓı@telö%%</td></tr>
-        <tr><td>14</td><td>%%ⱴȷɀ̃ı@zıyön%%</td></tr>
-        <tr><td>15</td><td>%%ɔ̃ɟɐʇ@kinsë%%</td></tr>
-        <tr><td>16</td><td>%%ɐ́ɿ@ses%%</td></tr>
-        <tr><td>17</td><td>%%ʌ́ʃ@dus%% %%ɋʇcɟ@xëti%%</td></tr>
-        <tr><td>18</td><td>%%ʌ́ʃ@dus%% %%c̑ʃʒ́@tukwos%%</td></tr>
-        <tr><td>19</td><td>%%ʌ́ʃ@dus%% %%cɟɐ@tiso%%</td></tr>
-        <tr><td>20</td><td>%%ʌʄɽɟ@düi%% %%ʌ́ʃ@dus%%</td></tr>
-        <tr><td>21</td><td>%%ʌʄɽɟ@düi%% %%ʌ́ʃ@dus%% %%ɔ̆ʃ@kut%%</td></tr>
-        <tr><td>22</td><td>%%ʌʄɽɟ@düi%% %%ʌ́ʃ@dus%% %%ʌʄɽɟ@düi%%</td></tr>
-        <tr><td>23</td><td>%%ʌʄɽɟ@düi%% %%ʌʃƶɔ@dumoko%% %%ɐ̃@son%%</td></tr>
-        <tr><td>100</td><td>%%ɤɟɀ̃ʇ@viyën%%</td></tr>
-        <tr><td>101</td><td>%%ɤɟɀ̃ʇ@viyën%% %%ɔ̆ʃ@kut%%</td></tr>
-        <tr><td>234</td><td>%%ʌʄɽɟ@düi%% %%ɤɟɀ̃ʇ@viyën%% %%ɐ̃@son%% %%ʌ́ʃ@dus%% %%ƨ̃ɔʄ@nonkü%%</td></tr>
-        <tr><td>1000</td><td>%%ꞇ̃ȷ@cın%% %%ɔ̆ʃ@kut%%</td></tr>
-        <tr><td>1,000,000</td><td>%%ꞇ̃ȷ@cın%% %%ʌʄɽɟ@düi%%</td></tr>
-        <tr><td>1,999</td><td>%%ꞇ̃ȷ@cın%% %%ɔ̆ʃ@kut%%､ %%cɟɐ@tiso%% %%ɤɟɀ̃ʇ@viyën%% %%cɟɐ@tiso%% %%ʌ́ʃ@dus%% %%cɟɐ@tiso%%</td></tr>
+        <tr><td><p>0</p></td><td><HisyeoText kind='abugida'>xünyu</HisyeoText></td></tr>
+        <tr><td><p>1</p></td><td><HisyeoText kind='abugida'>kut</HisyeoText></td></tr>
+        <tr><td><p>2</p></td><td><HisyeoText kind='abugida'>düi</HisyeoText></td></tr>
+        <tr><td><p>3</p></td><td><HisyeoText kind='abugida'>son</HisyeoText></td></tr>
+        <tr><td><p>4</p></td><td><HisyeoText kind='abugida'>nonkü</HisyeoText></td></tr>
+        <tr><td><p>5</p></td><td><HisyeoText kind='abugida'>tiü</HisyeoText></td></tr>
+        <tr><td><p>6</p></td><td><HisyeoText kind='abugida'>toü</HisyeoText></td></tr>
+        <tr><td><p>7</p></td><td><HisyeoText kind='abugida'>xëti</HisyeoText></td></tr>
+        <tr><td><p>8</p></td><td><HisyeoText kind='abugida'>tukwos</HisyeoText></td></tr>
+        <tr><td><p>9</p></td><td><HisyeoText kind='abugida'>tiso</HisyeoText></td></tr>
+        <tr><td><p>10</p></td><td><HisyeoText kind='abugida'>dus</HisyeoText></td></tr>
+        <tr><td><p>11</p></td><td><HisyeoText kind='abugida'>önsu</HisyeoText></td></tr>
+        <tr><td><p>12</p></td><td><HisyeoText kind='abugida'>pole</HisyeoText></td></tr>
+        <tr><td><p>13</p></td><td><HisyeoText kind='abugida'>telö</HisyeoText></td></tr>
+        <tr><td><p>14</p></td><td><HisyeoText kind='abugida'>zıyön</HisyeoText></td></tr>
+        <tr><td><p>15</p></td><td><HisyeoText kind='abugida'>kinsë</HisyeoText></td></tr>
+        <tr><td><p>16</p></td><td><HisyeoText kind='abugida'>ses</HisyeoText></td></tr>
+        <tr><td><p>17</p></td><td><HisyeoText kind='abugida'>dus xëti</HisyeoText></td></tr>
+        <tr><td><p>18</p></td><td><HisyeoText kind='abugida'>dus tukwos</HisyeoText></td></tr>
+        <tr><td><p>19</p></td><td><HisyeoText kind='abugida'>dus tiso</HisyeoText></td></tr>
+        <tr><td><p>20</p></td><td><HisyeoText kind='abugida'>düi dus</HisyeoText></td></tr>
+        <tr><td><p>21</p></td><td><HisyeoText kind='abugida'>düi dus kut</HisyeoText></td></tr>
+        <tr><td><p>22</p></td><td><HisyeoText kind='abugida'>düi dus düi</HisyeoText></td></tr>
+        <tr><td><p>23</p></td><td><HisyeoText kind='abugida'>düi dus son</HisyeoText></td></tr>
+        <tr><td><p>100</p></td><td><HisyeoText kind='abugida'>viyën</HisyeoText></td></tr>
+        <tr><td><p>101</p></td><td><HisyeoText kind='abugida'>viyën kut</HisyeoText></td></tr>
+        <tr><td><p>234</p></td><td><HisyeoText kind='abugida'>düi viyën son dus nonkü</HisyeoText></td></tr>
+        <tr><td><p>1000</p></td><td><HisyeoText kind='abugida'>cın kut</HisyeoText></td></tr>
+        <tr><td><p>1,000,000</p></td><td><HisyeoText kind='abugida'>cın düi</HisyeoText></td></tr>
+        <tr><td><p>1,999</p></td><td><HisyeoText kind='abugida'>cın kut, tiso viyën tiso dus tiso</HisyeoText></td></tr>
     </table>
   </TabItem>
 </Tabs>
 
-Add one of these before your noun and you have provided a quantity determiner.
+Add one of these before your noun and you have provided a quantity determiner (a
+cardinal number).
 
-<Tabs groupId="popöun-kon-cukto" queryString>
-    <TabItem value="latin" label="Latin" default>
-        <p>%%cok@cok%% %%ü@ü%% <strong>%%son@son%%</strong> %%sütüö@sütüö%% %%sün@sün%% %%zomo@zomo%%. "Three friends are leaving the group."</p>
-        <p>%%puswen@puswen%% %%ü@ü%% %%ni@ni%% %%cö@cö%% <strong>%%son@son%% %%dus@dus%% %%tiü@tiü%%</strong> %%ëvun@ëvun%% %%oxon@oxon%% %%do@do%% %%piek@piek%% %%cö@cö%% %%piek@piek%% %%süwit@süwit%% %%övo@övo%%. "We need 35 minutes to bake this cake.</p>
-    </TabItem>
-    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-        <p>%%ꞇ̑@cok%% %%ɽʄ@ü%% <strong>%%ɐ̃@son%%</strong> %%ɐʄcʄɽı@sütüö%% %%ɐ̃ʄ@sün%% %%ⱴƶ@zomo%%. "Three friends are leaving the group."</p>
-        <p>%%ʋ́ʃʒ̃ɿ@puswen%% %%ɽʄ@ü%% %%ƨɟ@ni%% %%ꞇı@cö%% <strong>%%ɐ̃@son%% %%ʌ́ʃ@dus%% %%cɟɽʄ@tiü%%</strong> %%ɽʇɤ̃ʃ@ëvun%% %%ɽɋ̃@oxon%% %%ʌ@do%% %%ʋɟɽ̑ɿ@piek%% %%ꞇı@cö%% %%ʋɟɽ̑ɿ@piek%% %%ɐʄʒ̆ɟ@süwit%% %%ɽıɤ@övo%%. "We need 35 minutes to bake this cake.</p>
-    </TabItem>
-</Tabs>
+<HisyeoTabs>
+  <p>cok ü son sütüö sün zomo. <em>"Three friends are leaving the group."</em></p>
+  <p>puswen ü ni cö son dus tiü ëvun oxon do piek cö piek süwit övo. <em>"We need 35 minutes to bake this cake."</em></p>
+</HisyeoTabs>
 
-Providing the quantity "one" (%%kut@kut%% / %%ɔ̆ʃ@kut%%) can be used as a kind of
+Providing a quantity determiner of "one" (<HisyeoWord is='kut'/>) can be used as a kind of
 indefinite article. Like the English article "a" or "an".
 
 ## Relative
@@ -119,24 +118,12 @@ they are attached to. They can be relative quantities which are like the above
 numerical quantities but with a non-exact non-finite understanding of what the
 exact numerical quantity the noun actually is. 
 
-<Tabs groupId="popöun-kon-cukto" queryString>
-    <TabItem value="latin" label="Latin" default>
-        <ul>
-          <li><strong>%%yoüti@yoüti%%</strong>: %%süko@süko%% %%ü@ü%% %%yoüti@yoüti%% %%umo@umo%% %%cö@cö%% %%kon@kon%% %%mühoyon@mühoyon%%. "Some people like camping."</li>
-          <li><strong>%%ëto@ëto%%</strong>: %%ëto@ëto%% %%toliko@toliko%% %%xönë@xönë%% %%yë@yë%% %%do@do%% %%cöüvon@cöüvon%% %%cö@cö%% %%cöüvon@cöüvon%%. "There are many different ways to cook a meal."</li>
-          <li><strong>%%mënüs@mënüs%%</strong>: %%mënüs@mënüs%% %%umo@umo%% %%hoi@hoi%% %%övo@övo%% %%ipüdü@ipüdü%%. "There are less people here now."</li>
-          <li><strong>%%eswen@eswen%%</strong>: %%eswen@eswen%% %%toliko@toliko%% %%yë@yë%% %%do@do%% %%tüu@tüu%% %%cö@cö%% %%övo@övo%%, %%en@en%% %%vos@vos%% %%köi@köi%% %%tüek@tüek%% %%vio@vio%% %%kut@kut%% %%ü@ü%% %%noyo@noyo%%. "There are more ways to do this than I can count."</li>
-        </ul>
-    </TabItem>
-    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-        <ul>
-          <li><strong>%%ɀɽʄcɟ@yoüti%%</strong>: %%ɐʄɔ@süko%% %%ɽʄ@ü%% %%ɀɽʄcɟ@yoüti%% %%ɽʃƶ@umo%% %%ꞇı@cö%% %%ɔ̃@kon%% %%ƶʄɂɀ̃@mühoyon%%. "Some people like camping."</li>
-          <li><strong>%%ɽʇc@ëto%%</strong>: %%ɽʇc@ëto%% %%cʓɟɔ@toliko%% %%ɋ̃ı@xön%% %%ɀʇ@yë%% %%ʌ@do%% %%ꞇıɽʄɤ̃@cöüvon%% %%ꞇı@cö%% %%ꞇıɽʄɤ̃@cöüvon%%. "There are many different ways to cook a meal."</li>
-          <li><strong>%%ƶʇƨ́ʄ@mënüs%%</strong>: %%ƶʇƨ́ʄ@mënüs%% %%ɽʃƶ@umo%% %%ɂɽɟ@hoi%% %%ɽıɤ@övo%% %%ɽɟʋʄʌʄ@ipüdü%%. "There are less people here now."</li>
-          <li><strong>%%ɽ́ɿʒ̃ɿ@eswen%%</strong>: %%ɽ́ɿʒ̃ɿ@eswen%% %%cʓɟɔ@toliko%% %%ɀʇ@yë%% %%ʌ@do%% %%cʄɽʃ@tüu%% %%ꞇı@cö%% %%ɽıɤ@övo%%, %%ɽ̃ɿ@en%% %%ɤ́@vos%% %%ɔıɽɟ@köi%% %%cʄɽ̑ɿ@tüek%% %%ɤɟɽ@vio%% %%ɔ̆ʃ@kut%% %%ɽʄ@ü%% %%ƨɀ@noyo%%. "There are more ways to do this than I can count."</li>
-        </ul>
-    </TabItem>
-</Tabs>
+<HisyeoTabs>
+  <p><strong>yoüti</strong>: süko ü yoüti umo cö kon mühoyon. <em>"Some people like camping."</em></p>
+  <p><strong>ëto</strong>: ëto toliko xönë yë do cöüvon cö cöüvon. <em>"There are many different ways to cook a meal."</em></p>
+  <p><strong>mënüs</strong>: mënüs umo hoi övo ipüdü. <em>"There are less people here now."</em></p>
+  <p><strong>eswen</strong>: eswen toliko yë do tüu cö övo, en vos köi tüek vio kut ü noyo. <em>"There are more ways to do this than I can count."</em></p>
+</HisyeoTabs>
 
 There's also the universal classifications of "every" and "each". These allow
 for more specific and complex logical statements.
@@ -204,3 +191,5 @@ the quantity is an adequate amount for their purposes.
         </ul>
     </TabItem>
 </Tabs>
+
+<HisyeoTooltip/>
