Add more quantity determiner info

--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -111,6 +111,33 @@ cardinal number).
 Providing a quantity determiner of "one" (<HisyeoWord is='kut'/>) can be used as a kind of
 indefinite article. Like the English article "a" or "an".
 
+### Ordinal
+
+Place a number word as a regular modifier (after the head noun) and it will
+represent a relative position of an item in a sequence (an ordinal number).
+
+<HisyeoTabs>
+  <p>nomü son do sün ximol ü süko noyo. <em>"The third tree from the left is my favorite."</em></p>
+  <p>ü noyo lı umo nonkü do si cok. <em>"I was the fourth person to leave."</em></p>
+</HisyeoTabs>
+
+### Multiplier
+
+Place a number word after (<HisyeoWord is='öni'/>) and use this as a modifier to
+represent the number of times something is to be multiplied.
+
+<HisyeoTabs>
+  <p>yünyoü ü poholon cö zınkon öni düi. <em>"The closet has double doors."</em></p>
+  <p>kiösö ëto ü loı köi tüu opunyun cö zoston öni nonkü. <em>"He's quite athletic and can do quadruple jumps with ease."</em></p>
+</HisyeoTabs>
+
+### Adverbial
+{/* TODO */}
+### Distributive
+{/* TODO */}
+### Fractional
+{/* TODO */}
+
 ## Relative
 
 Relative determiners provide relativistic information about the head phrase that
