Add adverbial numerals info and examples

--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -132,7 +132,15 @@ represent the number of times something is to be multiplied.
 </HisyeoTabs>
 
 ### Adverbial
-{/* TODO */}
+
+Place a number word before the head word of a verb phrase to represent that the
+action of the verb phrase occurred a certain number of times.
+
+<HisyeoTabs>
+  <p>si kut mokon tölki ü noyo cö piek potuk yë öni mulö <em>"I have only once eaten pizza"</em></p>
+  <p>küu düi yön ü nimü cö sikot hoköli win xokön lono. <em>You should use your toothbrush twice a day.</em></p>
+</HisyeoTabs>
+
 ### Distributive
 {/* TODO */}
 ### Fractional
