--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -4,6 +4,10 @@ sidebar_position: 1
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import HisyeoTabs from '@site/src/components/HisyeoTabs'
+import HisyeoText from '@site/src/components/HisyeoText'
+import HisyeoWord from '@site/src/components/HisyeoWord'
+import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Nouns
 
@@ -15,21 +19,21 @@ quantifiers and modifiers.
 
 ### Causer / Voluntary Subject
 
-The %%ü@ü%%/%%ɽʄ@ü%% particle precedes this noun phrase.
+The <HisyeoWord is='ü'/> particle precedes this noun phrase.
 
 During causative sentences, a NP with this role represents the *causer*.
 Otherwise, an NP with this role will be the **agent** or **experiencer** of the
 action. The nature of this role is that the marked noun phrase is making the
 choice to commit the act of the predicate of their own free will. 
 
-When used with the negatitive particle (%%yök / ɀ̑ı@yök%%) it means that the
+When used with the negatitive particle <HisyeoWord is='yök'/> it means that the
 marked noun phrase is either excluded from being the subject of the committed
 act of the predicate or that the act itself was committed but by something other
 than the marked noun phrase.
 
 ### Causee / Involuntary Subject
 
-The %%ölë@ölë%%/%%ɽıʓʇ@ölë%% particle precedes this noun phrase.
+The <HisyeoWord is='ölë'/> particle precedes this noun phrase.
 
 During causative sentences, a NP with this role will represent the *causee*.
 Otherwise, an NP with this role will be the agent or experiencer of the action.
@@ -38,12 +42,12 @@ choice to commit the act of their own free will. Either they are bound/forced to
 do so or they do not have the wherewithal to make a conscious choice on the
 matter and are acting out of some basic instinst.
 
-When used with the negatitive particle (%%yök / ɀ̑ı@yök%%) it has the same
+When used with the negatitive particle <HisyeoWord is='yök'/> it has the same
 semantic interpretation as the voluntary subject particle.
 
 ### Patient, Theme, Stimulus (Direct Object)
 
-The %%cö@cö%%/%%ꞇı@cö%% particle precedes this noun phrase.
+The <HisyeoWord is='cö'/> particle precedes this noun phrase.
 
 This role is used in predicates with transitive verbs that have an argument. The
 argument can represent a *patient* (an entity that undergoes the action and
@@ -72,14 +76,14 @@ remember is that only base verbs can take a preposition of this kind. **A
 sentence with a base modifier or base noun being used as a verb cannot contain
 this preposition.**
 
-When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the argument of the committed
 act of the predicate or that the act itself was committed but with an object
 that is something other than the marked noun phrase.
 
 ### Instrument or Manner
 
-The %%vio@vio%%/%%ɤɟɽ@vio%% particle precedes this noun phrase.
+The <HisyeoWord is='vio'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent some entity that was used to carry out
 the action. It can also represent the way or manner with which the action was
@@ -100,7 +104,7 @@ ordering**.
 
 :::
 
-When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the manner of instrument of the
 committed act of the predicate or that the act itself was committed but in a
 manner or with an object that is something other than the marked noun phrase. In
@@ -108,19 +112,19 @@ English, this represents some of the senses of the word "without".
 
 ### Location or Time
 
-The %%hoi@hoi%%/%%ɂɽɟ@hoi%% particle precedes this noun phrase.
+The <HisyeoWord is='hoi'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent where or when the action occurs. In
 English, this represents some of the senses of the words "in", "at", and "on".
 
-When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the location or time of the
 committed act of the predicate or that the act itself was committed but at a
 location or time that is somewhere other than the marked noun phrase.
 
 ### Direction or Destination (Indirect Object)
 
-The %%müt@müt%%/%%ƶ̆ʄ@müt%% particle precedes this noun phrase.
+The <HisyeoWord is='müt'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent where the action is directed towards.
 In English, this represents some of the senses of the words "to", "into", and
@@ -129,52 +133,57 @@ use this preposition to describe that constituent.
 
 :::info Reciprocity
 
-When you use this preposition with an NP of "%%xokön@xokön%% %%dizel@dizel%%",
+When you use this preposition with an NP of:
+
+<HisyeoTabs>
+  <p>xokön dizel</p>
+</HisyeoTabs>
+
 it means that the predicate is a reciprocal action which means that it happened
 between the subjects instead of the subjects directing that action towards some
 other referred entity.
 
 :::
 
-When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the recipient of the committed
 act of the predicate or that the act itself was committed but with recipient
 that is something other than the marked noun phrase.
 
 ### Source or Origin
 
-The %%sün@sün%%/%%ɐ̃ʄ@sün%% particle precedes this noun phrase.
+The <HisyeoWord is='sün'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent where the action originated. In
 English, this represents some of the senses of the word "from".
 
-When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the source or origin of the
 committed act of the predicate or that the act itself was committed but with a
 source or origin that is something other than the marked noun phrase.
 
 ### Beneficiary or Purpose
 
-The %%oxon@oxon%%/%%ɽɋ̃@oxon%% particle precedes this noun phrase.
+The <HisyeoWord is='oxon'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent for whose benefit the action occurs or
 the reason for the action. In English, this represents some of the senses of the
 word "for".
 
-When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the beneficiary/purpose of the
 committed act of the predicate or that the act itself was committed but with a
 beneficiary/purpose that is something other than the marked noun phrase.
 
 ### Cause
 
-The %%nënko@nënko%%/%%ƨ̃ʇɔ@nënko%% particle precedes this noun phrase.
+The <HisyeoWord is='nënko'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent what caused the action to occur or a
 past reason that led to the action. In English, this represents some of the
 senses of the word "because".
 
-When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the cause of the committed
 act of the predicate or that the act itself was committed but with a cause
 that is something other than the marked noun phrase. In English, this represents
@@ -182,14 +191,14 @@ some of the senses of the word "despite".
 
 ### Collaborator
 
-The %%ovek@ovek%%/%%ɽɤ̑ɿ@ovek%% particle precedes this noun phrase.
+The <HisyeoWord is='ovek'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent a fellow actor that is also engaged in
 the same action as the subject. However, the NP is not considered a subject of
 the sentence. In English, this represents some of the senses of the word
 "with".
 
-When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from participating in the committed
 act of the predicate or that the act itself was committed but with a participant
 that is something other than the marked noun phrase. In English, this represents
@@ -197,13 +206,13 @@ some of the senses of the word "without".
 
 ### Context or Condition
 
-The %%win@win%%/%%ʒ̃ɟ@win%% particle precedes this noun phrase.
+The <HisyeoWord is='win'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent an overarching topic, contextual
 detail, or a condition for the underlying sentence. In English, this represents
 some of the senses of the words "regarding", "given", "as for", and "when".
 
-When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the topic or context of the
 committed act of the predicate or that the act itself was committed but with a
 topic/context that is something other than the marked noun phrase. In English,
@@ -211,70 +220,84 @@ this represents some of the senses of the word "regardless".
 
 ### Counter-Agent
 
-The %%dën@dën%%/%%ʌ̃ʇ@dën%% particle precedes this noun phrase.
+The <HisyeoWord is='dën'/> particle precedes this noun phrase.
 
 This role is used for NPs that either represent a special kind of goal/agent for
 verbs that indicates an opposing agent for verbs that indicate an action that is
 *oppositional* (where both sides are engaging in an opposing action). In
 English, this represents some of the senses of the word "against".
 
-When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the counter-agent of the
 committed act of the predicate or that the act itself was committed but with a
 counter-agent that is something other than the marked noun phrase.
 
 ### Evidence
 
-The %%oldıs@oldıs%%/%%ɽ͊ʌ́ȷ@oldıs%% particle precedes this noun phrase.
+The <HisyeoWord is='oldıs'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent proof or an information source that the
 specified action is known or believed to have occurred, is occurring, or will
 occur. In English, this represents some of the senses of the phrase "or so".
 
-When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the proof/source of the
 committed act of the predicate or that the act itself was committed but with
 proof or a source that is something other than the marked noun phrase.
 
 ### Distance or Duration
 
-The %%lon@lon%%/%%ʓ̃@lon%% particle precedes this noun phrase.
+The <HisyeoWord is='lon'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent the time or space that the action
 occurs within. This role is related to the location/time role but it represents
 finite physical space or actual time periods. In English, this represents some
 of the senses of the word "for".
 
-When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the distance ordutation of the
 committed act of the predicate or that the act itself was committed but with a
 duration or distance that is something other than the marked noun phrase.
 
 ### Intermediate
 
-The %%gıtno@gıtno%%/%%ꜿ̆ȷƨ@gıtno%% particle precedes this noun phrase.
+The <HisyeoWord is='gıtno'/> particle precedes this noun phrase.
 
 This role is used for either a NP that represents the a time or physical entity
 that the action occurs between or a conjunction of two NPs that represent two
 boundaries in time or space that the action occurs between. In English, this
 represents some of the senses of the word "between".
 
-When used with the negatitive particle (%%yök / ɀ̑ı@yök%%), it means that the
+When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the intermediary entity of the
 committed act of the predicate or that the act itself was committed but with an
 intermediary that is something other than the marked noun phrase.
 
+### Similative
+
+The <HisyeoWord is='mıslı'/> particle precedes this noun phrase.
+
+This role is used for a NP that represents something that the action or state of
+the predicate resembles or is a likeness of. It can also be used to introduce a
+[simile](https://en.wikipedia.org/wiki/Simile). In English, this represents some
+of the senses of the words "like" and "as". When used with a subordinate clause,
+it can also represent the English phrase "as if".
+
+When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
+marked noun phrase is not a likeness of the action or state of the predicate. In
+English, the word "unlike" would be an equivalent.
+
 ### Genitive
 
-The %%yë@yë%%/%%ɀʇ@yë%% particle precedes this noun phrase.
+The <HisyeoWord is='yë'/> particle precedes this noun phrase.
 
 This role is used for a NP that is describing the preceding noun or verb phrase
 in some contextually dependent manner. In English, this represents some of the
 senses of the word "of".
 
-This particle isn't used with the negatitive particle (%%yök / ɀ̑ı@yök%%)
+This particle isn't used with the negatitive particle <HisyeoWord is='yök'/>
 because it's meant to describe nouns through associating other nouns and there's
-already an existing way to describe zero nouns (%%xünyu / ɋ̃ʄɀʃ@xünyu%%). You can
+already an existing way to describe zero nouns (<HisyeoWord is='xünyu'/>). You can
 achieve a similar kind of negative association by using a relative clause.
 
 ## From...
@@ -297,31 +320,23 @@ out of a modifier is to provide it as the nucleus of a preposition phrase.
 Preposition particles always take the word is immediately following it as a noun
 derivation of that word and it is the nucleus of the preposition phrase.
 
-<Tabs groupId="popöun-kon-cukto" queryString>
-  <TabItem value="latin" label="Latin" default>
-    %%pön@pön%% %%ü@ü%% %%wölık@wölık%% %%cö@cö%% %%küyö@küyö%%
-  </TabItem>
-  <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-    %%ʋ̃ı@pön%% %%ɽʄ@ü%% %%ʒıʓ̑ȷ@wölık%% %%ꞇı@cö%% %%ɔʄɀı@küyö%%
-  </TabItem>
-</Tabs>
+<HisyeoTabs>
+  <p>pön ü wölık cö küyö</p>
+</HisyeoTabs>
 
-Another way is to create a genitive phrase by preceding the modifier with the
-%%yë@yë%%/%%ɀʇ@yë%% particle. This particle means that whatever word type that the word
-immediately following it is, take the noun derivation of that word type.
+
+Another way is to create a genitive phrase by preceding the modifier with the <HisyeoWord is='yë'/> particle.
+This particle means that whatever word type that the word immediately following
+it is, take the noun derivation of that word type.
 
 This is especially useful for the typical reason that genitive phrases are
 useful: it allows you to describe a quality with some modifiers of its own. One
 of the most common usages is when adding a degree to a modifier:
 
-<Tabs groupId="popöun-kon-cukto" queryString>
-  <TabItem value="latin" label="Latin" default>
-    %%töxücı@töxücı%% %%pümi@pümi%% %%yë@yë%% %%ıwotë@ıwotë%% %%ëto@ëto%%
-  </TabItem>
-  <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-    %%cıɋʄꞇȷ@töxücı%% %%ʋʄƶɟ@pümi%% %%ɀʇ@yë%% %%ɽȷʒcʇ@ıwotë%% %%ɽʇc@ëto%%
-  </TabItem>
-</Tabs>
+<HisyeoTabs>
+  <p>töxücı pümi yë ıwotë ëto</p>
+</HisyeoTabs>
+
 
 Since Hisyëö has less than 800 words, using genitive phrases with modifiers
 allows you to create more complex phrases that would require several sentences
@@ -337,20 +352,10 @@ called a **Noun Clause**. In order to create one of these clauses, you must
 start with a particle. There are two special words available that can be used
 to introduce a noun clause:
 
-<Tabs groupId="popöun-kon-cukto" queryString>
-    <TabItem value="latin" label="Latin" default>
-        <ol>
-          <li>%%do@do%% - Use this one for infinitives and gerunds</li>
-          <li>%%vos@vos%% - Use this one for complete inner sentences</li>
-        </ol>
-    </TabItem>
-    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-        <ol>
-          <li>%%ʌ@do%% - Use this one for infinitives and gerunds</li>
-          <li>%%ɤ́@vos%% - Use this one for complete inner sentences</li>
-        </ol>
-    </TabItem>
-</Tabs>
+<ol>
+  <li><HisyeoWord is='do'/> - Use this one for infinitives and gerunds</li>
+  <li><HisyeoWord is='vos'/> - Use this one for complete inner sentences</li>
+</ol>
 
 After this particle, you start your sentence. In the infinitive/gerund form, you
 do not provide an agent/experiencer (subject) of the sentence because this is
@@ -358,14 +363,10 @@ the nature of how infinitives are used: a noun that refers to the meaning
 expressed by the inner sentence but referred holisitically as an object in the
 outer sentence.
 
-<Tabs groupId="popöun-kon-cukto" queryString>
-    <TabItem value="latin" label="Latin" default>
-        %%ëo@ëo%% %%govon@govon%% %%ölë@ölë%% %%noyo@noyo%% %%ü@ü%% <strong>%%do@do%%</strong> %%cöüvon@cöüvon%% %%cö@cö%% %%micin@micin%%. "to cook fish makes me disgusted"
-    </TabItem>
-    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-        %%ɽʇɽ@ëo%% %%ꜿɤ̃@govon%% %%ɽıʓʇ@ölë%% %%ƨɀ@noyo%% %%ɽʄ@ü%% <strong>%%ʌ@do%%</strong> %%ꞇıɽʄɤ̃@cöüvon%% %%ꞇı@cö%% %%micin@micin%%. "to cook fish makes me disgusted"
-    </TabItem>
-</Tabs>
+<HisyeoTabs>
+  <p>ëo govon ölë noyo ü <strong>do</strong> cöüvon cö micin. <em>"to cook fish makes me disgusted"</em></p>
+</HisyeoTabs>
+
 
 :::caution Beware the similarity between gerunds and the abstract particle
 
@@ -376,16 +377,11 @@ should be thought of as "acts of" or "matters of" which should be seen as more
 of a loose relationship than using a noun clause as a gerund. "acts/matters of
 eating meat" means something different from "eating meat".
 
-<Tabs groupId="popöun-kon-cukto" queryString>
-    <TabItem value="latin" label="Latin" default>
-        <p>%%toüyen@toüyen%% %%ü@ü%% %%noyo@noyo%% %%cö@cö%% %%do@do%% %%mokon@mokon%% %%cö@cö%% %%oksün@oksün%%.</p>
-        <p>%%toüyen@toüyen%% %%ü@ü%% %%noyo@noyo%% %%cö@cö%% %%kon@kon%% %%mokon@mokon%% %%oksün@oksün%%.</p>
-    </TabItem>
-    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-        <p>%%cɽʄɀ̃ɿ@toüyen%% %%ɽʄ@ü%% %%ƨɀ@noyo%% %%ꞇı@cö%% %%ʌ@do%% %%ƶɔ̃@mokon%% %%ꞇı@cö%% %%ɽ̑ɐɟɽ́ı@oksiös%%.</p>
-        <p>%%cɽʄɀ̃ɿ@toüyen%% %%ɽʄ@ü%% %%ƨɀ@noyo%% %%ꞇı@cö%% %%ɔ̃@kon%% %%ƶɔ̃@mokon%% %%ɽ̑ɐɟɽ́ı@oksiös%%.</p>
-    </TabItem>
-</Tabs>
+<HisyeoTabs>
+    <p>toüyen ü noyo cö do mokon cö oksün.</p>
+    <p>toüyen ü noyo cö kon mokon oksün.</p>
+</HisyeoTabs>
+
 
 The first sentence implies that the speaker hates specifically the act of eating
 meat whereas the second sentence implies that the speaker hates matters of meat
@@ -394,7 +390,7 @@ about it.
 
 :::
 
-The other form of noun phrase (%%vos@vos%%/%%ɤ́@vos%%) includes a subject or if one is not provided then,
+The other form of noun phrase (<HisyeoWord is='vos'/>) includes a subject or if one is not provided then,
 like a normal sentence, it should be intepreted as "there is" or "it is"
 depending on the predicate that is provided. This form of noun phrase is useful
 when you need to introduce a clause that changes (or removes) the subject from
@@ -402,16 +398,11 @@ the underlying sentence. Some verbs primarily are used with some form of noun
 clause as their object and this form allows for a complete sentence to be
 included as that object.
 
-<Tabs groupId="popöun-kon-cukto" queryString>
-    <TabItem value="latin" label="Latin" default>
-        <p>%%völun@völun%% %%ü@ü%% %%noyo@noyo%% %%cö@cö%% %%vos@vos%% %%völun@völun%% %%ü@ü%% %%nimü@nimü%% %%cö@cö%% %%noyo@noyo%% "I want you to want me"</p>
-        <p>%%xiwon@xiwon%% %%ü@ü%% %%noyo@noyo%% %%cö@cö%% %%vos@vos%% %%suhot@suhot%% %%tiü@tiü%% "I wish that it was 5 o'clock</p>
-    </TabItem>
-    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-        <p>%%ɤıʓ̃ʃ@völun%% %%ɽʄ@ü%% %%ƨɀ@noyo%% %%ꞇı@cö%% %%ɤ́@vos%% %%ɤıʓ̃ʃ@völun%% %%ɽʄ@ü%% %%ƨɟƶʄ@nimü%% %%ꞇı@cö%% %%ƨɀ@noyo%% "I want you to want me"</p>
-        <p>%%ɋɟʒ̃@xiwon%% %%ɽʄ@ü%% %%ƨɀ@noyo%% %%ꞇı@cö%% %%ɤ́@vos%% %%ɐʃɂ̆@suhot%% %%cɟɽʄ@tiü%% "I wish that it was 5 o'clock</p>
-    </TabItem>
-</Tabs>
+<HisyeoTabs>
+  <p>völun ü noyo cö vos völun ü nimü cö noyo <em>"I want you to want me"</em></p>
+  <p>xiwon ü noyo cö vos suhot tiü <em>"I wish that it was 5 o'clock"</em></p>
+</HisyeoTabs>
+
 
 :::note English indirect object
 
@@ -427,3 +418,5 @@ object of the English sentence is now the subject of the inner noun clause.
 
 There are other uses of these same particles as relative clause introducers and
 you can learn more about those usages in the Modifiers chapter.
+
+<HisyeoTooltip/>
